fix overlay z-index

--- a/src/sass/_forms.sass
+++ b/src/sass/_forms.sass
@@ -687,7 +687,7 @@
 					position: absolute
 					right: 25%
 					top: 35%
-					z-index: 10
+					z-index: 7
 		.form__btn-close
 			position: static
 			transform: translateY(0)
@@ -795,7 +795,7 @@
 		font-size: 12px
 		border-bottom: 1px dotted #9b9b9b
 	&__popup
-		z-index: 15
+		z-index: 8
 		text-align: left
 		width: 620px
 		padding: 20px 25px 20px 20px
