--- a/src/sass/_headfoot.sass
+++ b/src/sass/_headfoot.sass
@@ -11,7 +11,7 @@
 		background: #FFF
 		// z-index: 100001
 		// z-index: 7
-		z-index: 30
+		z-index: 9
 		border-bottom: 1px solid #dee1e7
 		.header__in
 			position: relative
